--- a/src/WebJobs.Extensions.IBMMQ/WebJobs.Extensions.IBMMQ.csproj
+++ b/src/WebJobs.Extensions.IBMMQ/WebJobs.Extensions.IBMMQ.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <AssemblyName>AzureWebJobs.Extensions.IBMMQ</AssemblyName>
         <RootNamespace>Azure.WebJobs.Extensions.IBMMQ</RootNamespace>
         <LangVersion>latest</LangVersion>
