--- a/src/Worker.Extensions.IBMMQ/Worker.Extensions.IBMMQ.csproj
+++ b/src/Worker.Extensions.IBMMQ/Worker.Extensions.IBMMQ.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <AssemblyName>AzureFunctions.Worker.Extensions.IBMMQ</AssemblyName>
         <RootNamespace>Azure.Functions.Worker.Extensions.IBMMQ</RootNamespace>
         <ImplicitUsings>true</ImplicitUsings>
