--- a/src/WebJobs.Extensions.IBMMQ/WebJobs.Extensions.IBMMQ.csproj
+++ b/src/WebJobs.Extensions.IBMMQ/WebJobs.Extensions.IBMMQ.csproj
@@ -7,7 +7,7 @@
         <ImplicitUsings>true</ImplicitUsings>
         <Nullable>enable</Nullable>
         <Description>Azure WebJobs SDK IBMMQ Extension</Description>
-        <PackageTags>ibmmq azurefunctions webjobs</PackageTags>
+        <PackageTags>ibmmq azurefunctions webjobs mqtrigger</PackageTags>
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="IBMXMSDotnetClient" Version="9.4.1" />
