--- a/src/Worker.Extensions.IBMMQ/Worker.Extensions.IBMMQ.csproj
+++ b/src/Worker.Extensions.IBMMQ/Worker.Extensions.IBMMQ.csproj
@@ -7,7 +7,7 @@
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
         <Description>IBMMQ extensions for .NET isolated functions</Description>
-        <PackageTags>ibmmq azurefunctions</PackageTags>
+        <PackageTags>ibmmq azurefunctions mqtrigger</PackageTags>
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Abstractions" Version="1.3.0" />
