feat: add multi-targeting support for .NET 8.0
- Add .NET 8.0 target framework while maintaining .NET 9.0 support
- Enable cross-version compatibility for both runtimes

--- a/src/Worker.Extensions.IBMMQ/Worker.Extensions.IBMMQ.csproj
+++ b/src/Worker.Extensions.IBMMQ/Worker.Extensions.IBMMQ.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
         <AssemblyName>AzureFunctions.Worker.Extensions.IBMMQ</AssemblyName>
         <RootNamespace>Azure.Functions.Worker.Extensions.IBMMQ</RootNamespace>
         <ImplicitUsings>true</ImplicitUsings>
