--- a/src/WebJobs.Extensions.IBMMQ/WebJobs.Extensions.IBMMQ.csproj
+++ b/src/WebJobs.Extensions.IBMMQ/WebJobs.Extensions.IBMMQ.csproj
@@ -8,6 +8,7 @@
         <Nullable>enable</Nullable>
         <Description>Azure WebJobs SDK IBMMQ Extension</Description>
         <PackageTags>ibmmq azurefunctions webjobs mqtrigger</PackageTags>
+        <Version>1.1.0</Version>
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="IBMXMSDotnetClient" Version="9.4.1" />
