--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -13,7 +13,11 @@ jobs:
 
       - name: Setup dotnet
         uses: actions/setup-dotnet@v1
-        
+        with:
+          dotnet-version: |-
+            8.x
+            9.x
+
       - name: Install dependencies
         run: dotnet restore
         
