--- a/samples/WebJobs.Extensions.Samples/WebJobs.Extensions.Samples.csproj
+++ b/samples/WebJobs.Extensions.Samples/WebJobs.Extensions.Samples.csproj
@@ -4,6 +4,7 @@
         <AzureFunctionsVersion>V4</AzureFunctionsVersion>
         <Nullable>enable</Nullable>
         <ImplicitUsings>true</ImplicitUsings>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.4.1" />
