--- a/samples/Worker.Extensions.Samples/Worker.Extensions.Samples.csproj
+++ b/samples/Worker.Extensions.Samples/Worker.Extensions.Samples.csproj
@@ -5,6 +5,7 @@
     <OutputType>Exe</OutputType>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Worker.Extensions.IBMMQ\Worker.Extensions.IBMMQ.csproj" />
