--- a/.editorconfig
+++ b/.editorconfig
@@ -2,5 +2,5 @@
 csharp_new_line_before_else = false
 csharp_new_line_before_catch = false
 csharp_new_line_before_finally = false
-csharp_new_line_before_open_brace = none
+csharp_new_line_before_open_brace = methods, types
 csharp_new_line_before_open_brace.control_blocks = false
