--- a/samples/WebJobs.Extensions.Samples/local.settings.json
+++ b/samples/WebJobs.Extensions.Samples/local.settings.json
@@ -1,10 +1,10 @@
 {
     "IsEncrypted": false,
     "Values": {
-        "AzureWebJobsStorage": "UseDevelopmentStorage=true",
+        "AzureWebJobsStorage": "DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFeqCnf2P==;BlobEndpoint=http://azurite:10000/devstoreaccount1;",
         "FUNCTIONS_WORKER_RUNTIME": "dotnet",
         "FUNCTIONS_INPROC_NET8_ENABLED": 1,
-        "MQ_CONNECTION_STRING": "Host=192.168.50.209;Port=1414;Channel=DEV.APP.SVRCONN;SSLCipherSpec=TLS_RSA_WITH_AES_256_CBC_SHA256;SSLCertLabel=mykey;SSLKeyRepo=*USER",
+        "MQ_CONNECTION_STRING": "Host=qmgr;Port=1414;Channel=DEV.APP.SVRCONN;UserId=app;Password=passw0rd",
         "MQ_QUEUE_INPUT": "DEV.QUEUE.1",
         "MQ_QUEUE_OUTPUT": "DEV.QUEUE.2"
     }
