--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,7 @@
             "name": "Attach to .NET Functions",
             "type": "coreclr",
             "request": "attach",
-            "processId": "${command:azureFunctions.pickProcess}",
-            "postDebugTask": "Release Blocked Port"
+            "processId": "${command:azureFunctions.pickProcess}"
         }
     ]
 }
