--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -18,7 +18,8 @@ services:
       - network_func_mq
 
   ibmmq:
-    image: icr.io/ibm-messaging/mq:latest
+    # list available images tags with: 'curl -X GET https://icr.io/v2/ibm-messaging/mq/tags/list'
+    image: icr.io/ibm-messaging/mq:9.4.3.0-r2
     container_name: ibmmqcontainer
     environment:
       - LICENSE=accept
@@ -27,8 +28,8 @@ services:
       - MQ_ADMIN_PASSWORD=passw0rd
       - MQ_APP_PASSWORD=passw0rd
       - MQ_DEV=true
-      - MQ_QMGR_NAME=QMGR
-      - MQ_ENABLE_METRICS=true
+      - MQ_QMGR_NAME=QM1
+      - MQ_ENABLE_METRICS=false  # Disable Prometheus metrics
       - TZ=Europe/Amsterdam
     ports:
       - 1414:1414
@@ -41,8 +42,8 @@ services:
       - ./certs/dev.cert.pem:/etc/mqm/pki/keys/devcert.pem:ro
       - ./certs/dev.key.pem:/etc/mqm/pki/keys/devkey.pem:ro
       - ./setup-mq-tls.sh:/etc/mqm/setup-mq-tls.sh:ro
-    # uncomment 'command' to setup TLS on queue manager QMGR
-    #command: bash -c "/etc/mqm/setup-mq-tls.sh && dspmq && crtmqm QMGR && strmqm QMGR && tail -f /dev/null"
+    # uncomment 'command' to setup TLS on queue manager QM1
+    #command: bash -c "/etc/mqm/setup-mq-tls.sh && dspmq && crtmqm QM1 && strmqm QM1 && tail -f /dev/null"
     # let the devcontainer generate the certs first...
     # note the timing issue...
     depends_on:
