webjobs example works

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,7 +28,7 @@
     1414,
     9443
   ],
-  "onCreateCommand": "sudo bash ./generate-cert.sh",
+  "onCreateCommand": "sudo bash ./.devcontainer/generate-cert.sh",
   "postCreateCommand": "dotnet restore",
   "remoteUser": "vscode"
   // no need to mount the dev certificate to devcontainer
