--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -19,7 +19,13 @@ services:
 
   ibmmq:
     # list available images tags with: 'curl -X GET https://icr.io/v2/ibm-messaging/mq/tags/list'
-    image: icr.io/ibm-messaging/mq:9.4.3.0-r2
+    #image: icr.io/ibm-messaging/mq:9.4.3.0-r2
+    build:
+      context: .
+      dockerfile: Dockerfile.ibmmq
+      args:
+        MQ_IMAGE_TAG: "9.4.3.0-r2"
+    image: "ibmmq:9.4.3.0-r2"
     container_name: ibmmqcontainer
     environment:
       - LICENSE=accept
