--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+  # The actual development container. This where your dev prompt is.
   devcontainer:
     build:
       context: .
@@ -13,13 +14,26 @@ services:
     container_name: devcontainer
     # first start the devcontainer, and generate certs for the MQ service
     depends_on:
-      - azurite
+      generate-cert:
+        condition: service_completed_successfully # wait for cert generation
+      azurite:
+        condition: service_healthy
     networks:
       - network_func_mq
 
+  # Initialization container to generate self-signed certs for local development
+  generate-cert:
+    build:
+      context: .
+      dockerfile: Dockerfile.generate-cert
+    image: "generate-cert:1.0"
+    container_name: generate-cert
+    volumes:
+      - ./certs:/certs
+
+  # IBM MQ container provides a local instance of IBM MQ for development and testing
   ibmmq:
-    # list available images tags with: 'curl -X GET https://icr.io/v2/ibm-messaging/mq/tags/list'
-    #image: icr.io/ibm-messaging/mq:9.4.3.0-r2
+    # list available image tags with: 'curl -X GET https://icr.io/v2/ibm-messaging/mq/tags/list'
     build:
       context: .
       dockerfile: Dockerfile.ibmmq
@@ -53,10 +67,12 @@ services:
     # let the devcontainer generate the certs first...
     # note the timing issue...
     depends_on:
-      - devcontainer
+      generate-cert:
+        condition: service_completed_successfully # wait for cert generation
     networks:
       - network_func_mq
   
+  # Azurite container to emulate Azure Storage (Blob, Queue, Table). Needed for Azure Functions Core.
   azurite:
     image: mcr.microsoft.com/azure-storage/azurite
     container_name: azurite
@@ -66,12 +82,20 @@ services:
       - "10002:10002" # Table
     command: "azurite --blobHost 0.0.0.0 --queueHost 0.0.0.0 --tableHost 0.0.0.0 --location /data"
     volumes:
-      # use a local folder in the root of your project
-      # exclude the contents of the folder in gitignore
+      # use a local folder in the root of your project to store Azurite data
+      # exclude the contents of the folder in .gitignore
       - ../azurite_data:/data
     networks:
       - network_func_mq
+    # Healthcheck runs inside the container
+    # see results with: 'docker inspect --format='{{json .State.Health}}' azurite | jq'
+    healthcheck:
+      test: ["CMD", "nc", "-z", "0.0.0.0", "10000"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
+# Define a custom network so the various containers can communicate
 networks:
   network_func_mq:
     driver: bridge
