--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,10 +9,9 @@ RUN apt-get update && apt-get install -y \
     wget \
     && rm -rf /var/lib/apt/lists/*
 
-# Add the Zscaler public certificates (CA and intermediates) to the image
+# Add the Zscaler public certificates (CA and intermediate) to the image
 # If Zscaler is not used, then no harm is done.
 COPY  certs_zscaler/Zscaler_Intermediate_Root_CA_zscaler.net.crt \
-      certs_zscaler/Zscaler_Intermediate_Root_CA_zscaler.net_t_until_06_sept_2025.crt \
       certs_zscaler/Zscaler_Root_CA.crt \
       /usr/local/share/ca-certificates/
 
